--- a/template/framework/ofbiz/OFComponentXml.vm
+++ b/template/framework/ofbiz/OFComponentXml.vm
@@ -12,14 +12,14 @@
     <resource-loader name="main" type="component"/>
     <classpath type="dir" location="config"/>
 
-    <!-- entity-resource type="model" reader-name="main" loader="main" location="entitydef/entitymodel.xml"/ -->
-    <!-- entity-resource type="data" reader-name="seed" loader="main" location="data/MyPortalSecurityPermissionSeedData.xml"/>
-    <entity-resource type="data" reader-name="demo" loader="main" location="data/MyPortalSecurityGroupDemoData.xml"/>
-    <entity-resource type="data" reader-name="demo" loader="main" location="data/MyPortalPageDemoData.xml"/>
-    <entity-resource type="data" reader-name="demo" loader="main" location="data/MyPortalDemoData.xml"/ -->
+    <entity-resource type="model" reader-name="main" loader="main" location="entitydef/entitymodel.xml"/>
+    <!-- entity-resource type="data" reader-name="seed" loader="main" location="data/MyPortalSecurityPermissionSeedData.xml"/ -->
+    <!-- entity-resource type="data" reader-name="demo" loader="main" location="data/MyPortalSecurityGroupDemoData.xml"/ -->
+    <!-- entity-resource type="data" reader-name="demo" loader="main" location="data/MyPortalPageDemoData.xml"/ -->
+    <!-- entity-resource type="data" reader-name="demo" loader="main" location="data/MyPortalDemoData.xml"/ -->
 
     <service-resource type="model" loader="main" location="servicedef/services.xml"/>
 
-    <webapp name="$applicationOF" title="$applicationNameOF" app-bar-display="true" base-permission="OFBTOOLS,WEBTOOLS"
+    <webapp name="$applicationOF" title="$applicationNameOF" app-bar-display="true" base-permission="WEBTOOLS"
         server="default-server" location="webapp" mount-point="/$applicationOF"/>
 </ofbiz-component>
